commit bilingual contents

--- a/docs/docs-ref-autogen/outlook_1_4/outlook/office.diagnostics.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/outlook/office.diagnostics.yml
@@ -2,13 +2,13 @@
 items:
   - uid: Outlook.Office.Diagnostics
     summary: |-
-      <span data-ttu-id="5fc84-101">将诊断信息提供给 Outlook 外接程序。</span><span class="sxs-lookup"><span data-stu-id="5fc84-101">Provides diagnostic information to an Outlook add-in.</span></span>
+      <span data-ttu-id="fb62c-101">将诊断信息提供给 Outlook 外接程序。</span><span class="sxs-lookup"><span data-stu-id="fb62c-101">Provides diagnostic information to an Outlook add-in.</span></span>
 
-      <span data-ttu-id="5fc84-102">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5fc84-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fb62c-102">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb62c-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     remarks: |-
-      <span data-ttu-id="5fc84-103">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="5fc84-103">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
+      <span data-ttu-id="fb62c-103">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="fb62c-103">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
 
-      <span data-ttu-id="5fc84-104">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="5fc84-104">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="fb62c-104">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="fb62c-104">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
     name: Office.Diagnostics
     fullName: Office.Diagnostics
     langs:
@@ -21,15 +21,17 @@ items:
       - Outlook.Office.Diagnostics.OWAView
   - uid: Outlook.Office.Diagnostics.hostName
     summary: |-
-      <span data-ttu-id="5fc84-105">获取表示主机应用程序的名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="5fc84-105">Gets a string that represents the name of the host application.</span></span>
+      <span data-ttu-id="fb62c-105">获取表示主机应用程序的名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="fb62c-105">Gets a string that represents the name of the host application.</span></span>
 
-      <span data-ttu-id="5fc84-106">可以是下列值之一的字符串: "Outlook"、"OutlookIOS" 或 "OutlookWebApp"。</span><span class="sxs-lookup"><span data-stu-id="5fc84-106">A string that can be one of the following values: "Outlook", "OutlookIOS", or "OutlookWebApp".</span></span>
+      <span data-ttu-id="fb62c-106">可以是下列值之一的字符串: "Outlook"、"OutlookWebApp"、"OutlookIOS" 或 "OutlookAndroid"。</span><span class="sxs-lookup"><span data-stu-id="fb62c-106">A string that can be one of the following values: "Outlook", "OutlookWebApp", "OutlookIOS", or "OutlookAndroid".</span></span>
 
-      <span data-ttu-id="5fc84-107">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5fc84-107">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fb62c-107">**注意**: 针对桌面客户端 (即 Windows 和 Mac) 上的 outlook 返回了 "outlook" 值。</span><span class="sxs-lookup"><span data-stu-id="fb62c-107">**Note**: The "Outlook" value is returned for Outlook on desktop clients (i.e., Windows and Mac).</span></span>
+
+      <span data-ttu-id="fb62c-108">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb62c-108">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     remarks: |-
-      <span data-ttu-id="5fc84-108">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="5fc84-108">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
+      <span data-ttu-id="fb62c-109">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="fb62c-109">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
 
-      <span data-ttu-id="5fc84-109">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="5fc84-109">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="fb62c-110">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="fb62c-110">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
     name: hostName
     fullName: hostName
     langs:
@@ -42,15 +44,15 @@ items:
           - string
   - uid: Outlook.Office.Diagnostics.hostVersion
     summary: |-
-      <span data-ttu-id="5fc84-110">获取表示主机应用程序或 Exchange Server 的版本的字符串。</span><span class="sxs-lookup"><span data-stu-id="5fc84-110">Gets a string that represents the version of either the host application or the Exchange Server.</span></span>
+      <span data-ttu-id="fb62c-111">获取表示主机应用程序或 Exchange 服务器的版本的字符串 (例如, "15.0.468.0")。</span><span class="sxs-lookup"><span data-stu-id="fb62c-111">Gets a string that represents the version of either the host application or the Exchange Server (e.g., "15.0.468.0").</span></span>
 
-      <span data-ttu-id="5fc84-111">如果邮件外接程序在桌面或 iOS 上的 Outlook 客户端中运行, 则 Diagnostics.hostversion 属性将返回主机应用程序 (Outlook) 的版本。</span><span class="sxs-lookup"><span data-stu-id="5fc84-111">If the mail add-in is running in Outlook client on the desktop or iOS, the hostVersion property returns the version of the host application, Outlook.</span></span> <span data-ttu-id="5fc84-112">在 Outlook 网页版中, 该属性返回的是 Exchange 服务器的版本。</span><span class="sxs-lookup"><span data-stu-id="5fc84-112">In Outlook on the web, the property returns the version of the Exchange Server.</span></span> <span data-ttu-id="5fc84-113">一个示例是字符串 "15.0.468.0"。</span><span class="sxs-lookup"><span data-stu-id="5fc84-113">An example is the string "15.0.468.0".</span></span>
+      <span data-ttu-id="fb62c-112">如果邮件外接程序在桌面或移动客户端上的 Outlook 中运行, 则 Diagnostics.hostversion 属性将返回主机应用程序 (Outlook) 的版本。</span><span class="sxs-lookup"><span data-stu-id="fb62c-112">If the mail add-in is running in Outlook on a desktop or mobile client, the hostVersion property returns the version of the host application, Outlook.</span></span> <span data-ttu-id="fb62c-113">在 Outlook 网页版中, 该属性返回的是 Exchange 服务器的版本。</span><span class="sxs-lookup"><span data-stu-id="fb62c-113">In Outlook on the web, the property returns the version of the Exchange Server.</span></span>
 
-      <span data-ttu-id="5fc84-114">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5fc84-114">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fb62c-114">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb62c-114">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     remarks: |-
-      <span data-ttu-id="5fc84-115">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="5fc84-115">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
+      <span data-ttu-id="fb62c-115">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="fb62c-115">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
 
-      <span data-ttu-id="5fc84-116">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="5fc84-116">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="fb62c-116">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="fb62c-116">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
     name: hostVersion
     fullName: hostVersion
     langs:
@@ -63,25 +65,25 @@ items:
           - string
   - uid: Outlook.Office.Diagnostics.OWAView
     summary: |-
-      <span data-ttu-id="5fc84-117">获取表示 web 上的 Outlook 的当前视图的字符串。</span><span class="sxs-lookup"><span data-stu-id="5fc84-117">Gets a string that represents the current view of Outlook on the web.</span></span>
+      <span data-ttu-id="fb62c-117">获取表示 web 上的 Outlook 的当前视图的字符串。</span><span class="sxs-lookup"><span data-stu-id="fb62c-117">Gets a string that represents the current view of Outlook on the web.</span></span>
 
-      <span data-ttu-id="5fc84-118">返回的字符串可以是下列值之一: "OneColumn"、"TwoColumns" 或 "ThreeColumns"。</span><span class="sxs-lookup"><span data-stu-id="5fc84-118">The returned string can be one of the following values: "OneColumn", "TwoColumns", or "ThreeColumns".</span></span>
+      <span data-ttu-id="fb62c-118">返回的字符串可以是下列值之一: "OneColumn"、"TwoColumns" 或 "ThreeColumns"。</span><span class="sxs-lookup"><span data-stu-id="fb62c-118">The returned string can be one of the following values: "OneColumn", "TwoColumns", or "ThreeColumns".</span></span>
 
-      <span data-ttu-id="5fc84-119">如果主机应用程序不是 web 上的 Outlook, 则访问此属性将导致未定义。</span><span class="sxs-lookup"><span data-stu-id="5fc84-119">If the host application is not Outlook on the web, then accessing this property results in undefined.</span></span>
+      <span data-ttu-id="fb62c-119">如果主机应用程序不是 web 上的 Outlook, 则访问此属性将导致未定义。</span><span class="sxs-lookup"><span data-stu-id="fb62c-119">If the host application is not Outlook on the web, then accessing this property results in undefined.</span></span>
 
-      <span data-ttu-id="5fc84-120">Web 上的 Outlook 具有三个视图, 分别对应于屏幕的宽度和窗口, 以及可以显示的列数:</span><span class="sxs-lookup"><span data-stu-id="5fc84-120">Outlook on the web has three views that correspond to the width of the screen and the window, and the number of columns that can be displayed:</span></span>
+      <span data-ttu-id="fb62c-120">Web 上的 Outlook 具有三个视图, 分别对应于屏幕的宽度和窗口, 以及可以显示的列数:</span><span class="sxs-lookup"><span data-stu-id="fb62c-120">Outlook on the web has three views that correspond to the width of the screen and the window, and the number of columns that can be displayed:</span></span>
 
-      - <span data-ttu-id="5fc84-121">当屏幕缩小时显示的 "OneColumn"。</span><span class="sxs-lookup"><span data-stu-id="5fc84-121">"OneColumn", which is displayed when the screen is narrow.</span></span> <span data-ttu-id="5fc84-122">Web 上的 Outlook 在智能手机的整个屏幕上使用此单列布局。</span><span class="sxs-lookup"><span data-stu-id="5fc84-122">Outlook on the web uses this single-column layout on the entire screen of a smartphone.</span></span>
+      - <span data-ttu-id="fb62c-121">当屏幕缩小时显示的 "OneColumn"。</span><span class="sxs-lookup"><span data-stu-id="fb62c-121">"OneColumn", which is displayed when the screen is narrow.</span></span> <span data-ttu-id="fb62c-122">Web 上的 Outlook 在智能手机的整个屏幕上使用此单列布局。</span><span class="sxs-lookup"><span data-stu-id="fb62c-122">Outlook on the web uses this single-column layout on the entire screen of a smartphone.</span></span>
 
-      - <span data-ttu-id="5fc84-123">当屏幕变宽时显示的 "TwoColumns"。</span><span class="sxs-lookup"><span data-stu-id="5fc84-123">"TwoColumns", which is displayed when the screen is wider.</span></span> <span data-ttu-id="5fc84-124">Outlook 网页版在大多数平板电脑上使用此视图。</span><span class="sxs-lookup"><span data-stu-id="5fc84-124">Outlook on the web uses this view on most tablets.</span></span>
+      - <span data-ttu-id="fb62c-123">当屏幕变宽时显示的 "TwoColumns"。</span><span class="sxs-lookup"><span data-stu-id="fb62c-123">"TwoColumns", which is displayed when the screen is wider.</span></span> <span data-ttu-id="fb62c-124">Outlook 网页版在大多数平板电脑上使用此视图。</span><span class="sxs-lookup"><span data-stu-id="fb62c-124">Outlook on the web uses this view on most tablets.</span></span>
 
-      - <span data-ttu-id="5fc84-125">"ThreeColumns", 在屏幕宽度时显示。</span><span class="sxs-lookup"><span data-stu-id="5fc84-125">"ThreeColumns", which is displayed when the screen is wide.</span></span> <span data-ttu-id="5fc84-126">例如, web 上的 Outlook 在桌面计算机上的全屏窗口中使用此视图。</span><span class="sxs-lookup"><span data-stu-id="5fc84-126">For example, Outlook on the web uses this view in a full screen window on a desktop computer.</span></span>
+      - <span data-ttu-id="fb62c-125">"ThreeColumns", 在屏幕宽度时显示。</span><span class="sxs-lookup"><span data-stu-id="fb62c-125">"ThreeColumns", which is displayed when the screen is wide.</span></span> <span data-ttu-id="fb62c-126">例如, web 上的 Outlook 在桌面计算机上的全屏窗口中使用此视图。</span><span class="sxs-lookup"><span data-stu-id="fb62c-126">For example, Outlook on the web uses this view in a full screen window on a desktop computer.</span></span>
 
-      <span data-ttu-id="5fc84-127">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5fc84-127">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fb62c-127">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb62c-127">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     remarks: |-
-      <span data-ttu-id="5fc84-128">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="5fc84-128">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
+      <span data-ttu-id="fb62c-128">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="fb62c-128">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
 
-      <span data-ttu-id="5fc84-129">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="5fc84-129">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="fb62c-129">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="fb62c-129">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
     name: OWAView
     fullName: OWAView
     langs:
