--- a/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
+++ b/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
@@ -10,6 +10,7 @@ items:
     package: office
     children:
       - office.Office.RequirementSetSupport.isSetSupported
+      - office.Office.RequirementSetSupport.isSetSupported_1
   - uid: office.Office.RequirementSetSupport.isSetSupported
     summary: 检查主机 Office 应用程序是否支持指定的要求集。
     name: 'isSetSupported(name, minVersion)'
@@ -18,17 +19,41 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'isSetSupported(name: string, minVersion?: string | number): boolean;'
+      content: 'isSetSupported(name: string, minVersion?: string): boolean;'
       return:
         type:
           - boolean
         description: ''
       parameters:
         - id: name
-          description: '集名称;例如, "MatrixBindings"。'
+          description: '要求集名称 (例如, "ExcelApi")。'
           type:
             - string
         - id: minVersion
-          description: '所需的最低版本;例如, "1.4"。 注意: 此参数的 String 类型是推荐的数据类型。 数字类型的使用已弃用, 将不与最近的要求集兼容。'
+          description: '所需的最低版本 (例如, "1.4")。'
           type:
-            - string | number
+            - string
+  - uid: office.Office.RequirementSetSupport.isSetSupported_1
+    summary: 检查主机 Office 应用程序是否支持指定的要求集。
+    deprecated:
+      content: Use the string overload of `isSetSupported` instead.
+    name: 'isSetSupported(name, minVersionNumber)'
+    fullName: 'isSetSupported(name, minVersionNumber)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'isSetSupported(name: string, minVersionNumber?: number): boolean;'
+      return:
+        type:
+          - boolean
+        description: ''
+      parameters:
+        - id: name
+          description: '要求集名称 (例如, "ExcelApi")。'
+          type:
+            - string
+        - id: minVersionNumber
+          description: '所需的最低版本 (例如, 1.4)。 警告: 此重载`isSetSupported` (其中`minVersionNumber`是一个数字) 已被弃用。 `isSetSupported`改用的字符串重载。'
+          type:
+            - number
