--- a/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
+++ b/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: office.Office.RequirementSetSupport
-    summary: <span data-ttu-id="a071c-101">提供有关当前环境中支持的要求集的信息。</span><span class="sxs-lookup"><span data-stu-id="a071c-101">Provides information about what Requirement Sets are supported in current environment.</span></span>
+    summary: <span data-ttu-id="03e17-101">提供有关当前环境中支持的要求集的信息。</span><span class="sxs-lookup"><span data-stu-id="03e17-101">Provides information about which Requirement Sets are supported in the current environment.</span></span>
     name: Office.RequirementSetSupport
     fullName: Office.RequirementSetSupport
     langs:
@@ -10,25 +10,50 @@ items:
     package: office
     children:
       - office.Office.RequirementSetSupport.isSetSupported
+      - office.Office.RequirementSetSupport.isSetSupported_1
   - uid: office.Office.RequirementSetSupport.isSetSupported
-    summary: <span data-ttu-id="a071c-102">检查主机 Office 应用程序是否支持指定的要求集。</span><span class="sxs-lookup"><span data-stu-id="a071c-102">Check if the specified requirement set is supported by the host Office application.</span></span>
+    summary: <span data-ttu-id="03e17-102">检查主机 Office 应用程序是否支持指定的要求集。</span><span class="sxs-lookup"><span data-stu-id="03e17-102">Check if the specified requirement set is supported by the host Office application.</span></span>
     name: 'isSetSupported(name, minVersion)'
     fullName: 'isSetSupported(name, minVersion)'
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'isSetSupported(name: string, minVersion?: string | number): boolean;'
+      content: 'isSetSupported(name: string, minVersion?: string): boolean;'
       return:
         type:
           - boolean
         description: ''
       parameters:
         - id: name
-          description: '<span data-ttu-id="a071c-103">集名称;例如, "MatrixBindings"。</span><span class="sxs-lookup"><span data-stu-id="a071c-103">Set name; e.g., "MatrixBindings".</span></span>'
+          description: '<span data-ttu-id="03e17-103">要求集名称 (例如, "ExcelApi")。</span><span class="sxs-lookup"><span data-stu-id="03e17-103">The requirement set name (e.g., "ExcelApi").</span></span>'
           type:
             - string
         - id: minVersion
-          description: '<span data-ttu-id="a071c-104">所需的最低版本;例如, "1.4"。</span><span class="sxs-lookup"><span data-stu-id="a071c-104">The minimum required version; e.g., "1.4".</span></span> <span data-ttu-id="a071c-105">注意: 此参数的 String 类型是推荐的数据类型。</span><span class="sxs-lookup"><span data-stu-id="a071c-105">Note: String type is recommended data type for this parameter.</span></span> <span data-ttu-id="a071c-106">数字类型的使用已弃用, 将不与最近的要求集兼容。</span><span class="sxs-lookup"><span data-stu-id="a071c-106">The use of number type is deprecated and will not be compatible with recent requirement sets.</span></span>'
+          description: '<span data-ttu-id="03e17-104">所需的最低版本 (例如, "1.4")。</span><span class="sxs-lookup"><span data-stu-id="03e17-104">The minimum required version (e.g., "1.4").</span></span>'
           type:
-            - string | number
+            - string
+  - uid: office.Office.RequirementSetSupport.isSetSupported_1
+    summary: <span data-ttu-id="03e17-105">检查主机 Office 应用程序是否支持指定的要求集。</span><span class="sxs-lookup"><span data-stu-id="03e17-105">Check if the specified requirement set is supported by the host Office application.</span></span>
+    deprecated:
+      content: Use the string overload of `isSetSupported` instead.
+    name: 'isSetSupported(name, minVersionNumber)'
+    fullName: 'isSetSupported(name, minVersionNumber)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'isSetSupported(name: string, minVersionNumber?: number): boolean;'
+      return:
+        type:
+          - boolean
+        description: ''
+      parameters:
+        - id: name
+          description: '<span data-ttu-id="03e17-106">要求集名称 (例如, "ExcelApi")。</span><span class="sxs-lookup"><span data-stu-id="03e17-106">The requirement set name (e.g., "ExcelApi").</span></span>'
+          type:
+            - string
+        - id: minVersionNumber
+          description: '<span data-ttu-id="03e17-107">所需的最低版本 (例如, 1.4)。</span><span class="sxs-lookup"><span data-stu-id="03e17-107">The minimum required version (e.g., 1.4).</span></span> <span data-ttu-id="03e17-108">警告: 此重载`isSetSupported` (其中`minVersionNumber`是一个数字) 已被弃用。</span><span class="sxs-lookup"><span data-stu-id="03e17-108">Warning: This overload of `isSetSupported` (where `minVersionNumber` is a number) is deprecated.</span></span> <span data-ttu-id="03e17-109">`isSetSupported`改用的字符串重载。</span><span class="sxs-lookup"><span data-stu-id="03e17-109">Use the string overload of `isSetSupported` instead.</span></span>'
+          type:
+            - number
