--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.tablechangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.tablechangedeventargs.yml
@@ -95,7 +95,7 @@ items:
           - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
   - uid: excel.Excel.TableChangedEventArgs.details
     summary: |-
-      表示更改详情的信息
+      表示有关更改详细信息的信息。 当对单个单元格触发 Changed 事件时, 可以检索此属性。 如果已更改的事件在多个单元格中触发, 则不能检索此属性。
 
       \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: details
