--- a/docs/docs-ref-autogen/word/word/word.interfaces.documentpropertiesdata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.documentpropertiesdata.yml
@@ -239,7 +239,7 @@ items:
           - string
   - uid: word.Word.Interfaces.DocumentPropertiesData.security
     summary: |-
-      获取 document 的安全性。 只读。
+      获取文档的安全设置。 只读。 有些是对磁盘上的文件的访问限制。 其他是文档保护设置。 可能的值为 0 = 磁盘上的文件是可读写的;1 = 保护文档: 文件已加密, 需要密码才能打开;2 = 保护文档: 始终以只读方式打开;3 = 保护文档: \#1 和\#2;4 = 磁盘上的文件为只读;5 = \#1 和\#4;6 = \#2 和\#4;7 = 1、 \# \#2 和\#4 的所有;8 = 保护文档: 将编辑限制为只读;9 = \#1 和\#8;10 = \#2 和\#8;11 = 1、 \# \#2 和\#8 的所有;12 = \#4 和\#8;13 = 1、 \# \#4 和\#8 的所有;14 = 全部 2 \#个、 \#4 个和\#8 个;15 = \#1、 \#2、 \#4 和\#8。
 
       \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: security
