commit bilingual contents

--- a/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
+++ b/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: office.Office.RequirementSetSupport
-    summary: <span data-ttu-id="03e17-101">提供有关当前环境中支持的要求集的信息。</span><span class="sxs-lookup"><span data-stu-id="03e17-101">Provides information about which Requirement Sets are supported in the current environment.</span></span>
+    summary: <span data-ttu-id="a9089-101">提供有关当前环境中支持的要求集的信息。</span><span class="sxs-lookup"><span data-stu-id="a9089-101">Provides information about which Requirement Sets are supported in the current environment.</span></span>
     name: Office.RequirementSetSupport
     fullName: Office.RequirementSetSupport
     langs:
@@ -12,7 +12,7 @@ items:
       - office.Office.RequirementSetSupport.isSetSupported
       - office.Office.RequirementSetSupport.isSetSupported_1
   - uid: office.Office.RequirementSetSupport.isSetSupported
-    summary: <span data-ttu-id="03e17-102">检查主机 Office 应用程序是否支持指定的要求集。</span><span class="sxs-lookup"><span data-stu-id="03e17-102">Check if the specified requirement set is supported by the host Office application.</span></span>
+    summary: <span data-ttu-id="a9089-102">检查主机 Office 应用程序是否支持指定的要求集。</span><span class="sxs-lookup"><span data-stu-id="a9089-102">Check if the specified requirement set is supported by the host Office application.</span></span>
     name: 'isSetSupported(name, minVersion)'
     fullName: 'isSetSupported(name, minVersion)'
     langs:
@@ -26,15 +26,15 @@ items:
         description: ''
       parameters:
         - id: name
-          description: '<span data-ttu-id="03e17-103">要求集名称 (例如, "ExcelApi")。</span><span class="sxs-lookup"><span data-stu-id="03e17-103">The requirement set name (e.g., "ExcelApi").</span></span>'
+          description: '<span data-ttu-id="a9089-103">要求集名称 (例如, "ExcelApi")。</span><span class="sxs-lookup"><span data-stu-id="a9089-103">The requirement set name (e.g., "ExcelApi").</span></span>'
           type:
             - string
         - id: minVersion
-          description: '<span data-ttu-id="03e17-104">所需的最低版本 (例如, "1.4")。</span><span class="sxs-lookup"><span data-stu-id="03e17-104">The minimum required version (e.g., "1.4").</span></span>'
+          description: '<span data-ttu-id="a9089-104">所需的最低版本 (例如, "1.4")。</span><span class="sxs-lookup"><span data-stu-id="a9089-104">The minimum required version (e.g., "1.4").</span></span>'
           type:
             - string
   - uid: office.Office.RequirementSetSupport.isSetSupported_1
-    summary: <span data-ttu-id="03e17-105">检查主机 Office 应用程序是否支持指定的要求集。</span><span class="sxs-lookup"><span data-stu-id="03e17-105">Check if the specified requirement set is supported by the host Office application.</span></span>
+    summary: <span data-ttu-id="a9089-105">检查主机 Office 应用程序是否支持指定的要求集。</span><span class="sxs-lookup"><span data-stu-id="a9089-105">Check if the specified requirement set is supported by the host Office application.</span></span>
     deprecated:
       content: Use the string overload of `isSetSupported` instead.
     name: 'isSetSupported(name, minVersionNumber)'
@@ -50,10 +50,10 @@ items:
         description: ''
       parameters:
         - id: name
-          description: '<span data-ttu-id="03e17-106">要求集名称 (例如, "ExcelApi")。</span><span class="sxs-lookup"><span data-stu-id="03e17-106">The requirement set name (e.g., "ExcelApi").</span></span>'
+          description: '<span data-ttu-id="a9089-106">要求集名称 (例如, "ExcelApi")。</span><span class="sxs-lookup"><span data-stu-id="a9089-106">The requirement set name (e.g., "ExcelApi").</span></span>'
           type:
             - string
         - id: minVersionNumber
-          description: '<span data-ttu-id="03e17-107">所需的最低版本 (例如, 1.4)。</span><span class="sxs-lookup"><span data-stu-id="03e17-107">The minimum required version (e.g., 1.4).</span></span> <span data-ttu-id="03e17-108">警告: 此重载`isSetSupported` (其中`minVersionNumber`是一个数字) 已被弃用。</span><span class="sxs-lookup"><span data-stu-id="03e17-108">Warning: This overload of `isSetSupported` (where `minVersionNumber` is a number) is deprecated.</span></span> <span data-ttu-id="03e17-109">`isSetSupported`改用的字符串重载。</span><span class="sxs-lookup"><span data-stu-id="03e17-109">Use the string overload of `isSetSupported` instead.</span></span>'
+          description: '<span data-ttu-id="a9089-107">所需的最低版本 (例如, 1.4)。</span><span class="sxs-lookup"><span data-stu-id="a9089-107">The minimum required version (e.g., 1.4).</span></span> <span data-ttu-id="a9089-108">**警告**: 此重载`isSetSupported` (其中`minVersionNumber`是一个数字) 已被弃用。</span><span class="sxs-lookup"><span data-stu-id="a9089-108">**Warning**: This overload of `isSetSupported` (where `minVersionNumber` is a number) is deprecated.</span></span> <span data-ttu-id="a9089-109">`isSetSupported`改用的字符串重载。</span><span class="sxs-lookup"><span data-stu-id="a9089-109">Use the string overload of `isSetSupported` instead.</span></span>'
           type:
             - number
