--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.tablechangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.tablechangedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.TableChangedEventArgs
     summary: |-
-      <span data-ttu-id="51f53-101">提供有关引发 Changed 事件的表的信息。</span><span class="sxs-lookup"><span data-stu-id="51f53-101">Provides information about the table that raised the Changed event.</span></span>
+      <span data-ttu-id="5692a-101">提供有关引发 Changed 事件的表的信息。</span><span class="sxs-lookup"><span data-stu-id="5692a-101">Provides information about the table that raised the Changed event.</span></span>
 
-      <span data-ttu-id="51f53-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51f53-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5692a-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5692a-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.TableChangedEventArgs
     fullName: Excel.TableChangedEventArgs
     langs:
@@ -23,9 +23,9 @@ items:
       - excel.Excel.TableChangedEventArgs.worksheetId
   - uid: excel.Excel.TableChangedEventArgs.getRange
     summary: |-
-      <span data-ttu-id="51f53-103">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="51f53-103">Gets the range that represents the changed area of a table on a specific worksheet.</span></span>
+      <span data-ttu-id="5692a-103">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="5692a-103">Gets the range that represents the changed area of a table on a specific worksheet.</span></span>
 
-      <span data-ttu-id="51f53-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51f53-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5692a-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5692a-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getRange(ctx)
     fullName: getRange(ctx)
     langs:
@@ -44,9 +44,9 @@ items:
             - excel.Excel.RequestContext
   - uid: excel.Excel.TableChangedEventArgs.getRangeOrNullObject
     summary: |-
-      <span data-ttu-id="51f53-105">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="51f53-105">Gets the range that represents the changed area of a table on a specific worksheet.</span></span> <span data-ttu-id="51f53-106">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="51f53-106">It might return null object.</span></span>
+      <span data-ttu-id="5692a-105">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="5692a-105">Gets the range that represents the changed area of a table on a specific worksheet.</span></span> <span data-ttu-id="5692a-106">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="5692a-106">It might return null object.</span></span>
 
-      <span data-ttu-id="51f53-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51f53-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5692a-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5692a-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getRangeOrNullObject(ctx)
     fullName: getRangeOrNullObject(ctx)
     langs:
@@ -65,9 +65,9 @@ items:
             - excel.Excel.RequestContext
   - uid: excel.Excel.TableChangedEventArgs.address
     summary: |-
-      <span data-ttu-id="51f53-108">获取地址，该地址表示特定工作表上的表格的更改区域。</span><span class="sxs-lookup"><span data-stu-id="51f53-108">Gets the address that represents the changed area of a table on a specific worksheet.</span></span>
+      <span data-ttu-id="5692a-108">获取地址，该地址表示特定工作表上的表格的更改区域。</span><span class="sxs-lookup"><span data-stu-id="5692a-108">Gets the address that represents the changed area of a table on a specific worksheet.</span></span>
 
-      <span data-ttu-id="51f53-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51f53-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5692a-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5692a-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: address
     fullName: address
     langs:
@@ -80,9 +80,9 @@ items:
           - string
   - uid: excel.Excel.TableChangedEventArgs.changeType
     summary: |-
-      <span data-ttu-id="51f53-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="51f53-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="51f53-111">有关详细信息, 请参阅 DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="51f53-111">See Excel.DataChangeType for details.</span></span>
+      <span data-ttu-id="5692a-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="5692a-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="5692a-111">有关详细信息, 请参阅 DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="5692a-111">See Excel.DataChangeType for details.</span></span>
 
-      <span data-ttu-id="51f53-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51f53-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5692a-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5692a-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: changeType
     fullName: changeType
     langs:
@@ -95,9 +95,9 @@ items:
           - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
   - uid: excel.Excel.TableChangedEventArgs.details
     summary: |-
-      <span data-ttu-id="51f53-113">表示更改详情的信息</span><span class="sxs-lookup"><span data-stu-id="51f53-113">Represents the information about the change detail</span></span>
+      <span data-ttu-id="5692a-113">表示有关更改详细信息的信息。</span><span class="sxs-lookup"><span data-stu-id="5692a-113">Represents the information about the change detail.</span></span> <span data-ttu-id="5692a-114">当对单个单元格触发 Changed 事件时, 可以检索此属性。</span><span class="sxs-lookup"><span data-stu-id="5692a-114">This property can be retrieved when the Changed event is triggered on single cell.</span></span> <span data-ttu-id="5692a-115">如果已更改的事件在多个单元格中触发, 则不能检索此属性。</span><span class="sxs-lookup"><span data-stu-id="5692a-115">If the Changed event is triggered on multiple cells, this property can not be retrieved.</span></span>
 
-      <span data-ttu-id="51f53-114">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51f53-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5692a-116">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5692a-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: details
     fullName: details
     langs:
@@ -111,7 +111,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="51f53-115">示例</span><span class="sxs-lookup"><span data-stu-id="51f53-115">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="5692a-117">示例</span><span class="sxs-lookup"><span data-stu-id="5692a-117">Examples</span></span>
 
           ```typescript
           async function onTableChanged(eventArgs: Excel.TableChangedEventArgs) {
@@ -126,9 +126,9 @@ items:
           ```
   - uid: excel.Excel.TableChangedEventArgs.source
     summary: |-
-      <span data-ttu-id="51f53-116">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="51f53-116">Gets the source of the event.</span></span> <span data-ttu-id="51f53-117">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="51f53-117">See Excel.EventSource for details.</span></span>
+      <span data-ttu-id="5692a-118">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="5692a-118">Gets the source of the event.</span></span> <span data-ttu-id="5692a-119">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="5692a-119">See Excel.EventSource for details.</span></span>
 
-      <span data-ttu-id="51f53-118">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51f53-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5692a-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5692a-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: source
     fullName: source
     langs:
@@ -141,9 +141,9 @@ items:
           - Excel.EventSource | "Local" | "Remote"
   - uid: excel.Excel.TableChangedEventArgs.tableId
     summary: |-
-      <span data-ttu-id="51f53-119">获取其中的数据发生更改的表格的 ID。</span><span class="sxs-lookup"><span data-stu-id="51f53-119">Gets the id of the table in which the data changed.</span></span>
+      <span data-ttu-id="5692a-121">获取其中的数据发生更改的表格的 ID。</span><span class="sxs-lookup"><span data-stu-id="5692a-121">Gets the id of the table in which the data changed.</span></span>
 
-      <span data-ttu-id="51f53-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51f53-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5692a-122">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5692a-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tableId
     fullName: tableId
     langs:
@@ -157,7 +157,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="51f53-121">示例</span><span class="sxs-lookup"><span data-stu-id="51f53-121">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="5692a-123">示例</span><span class="sxs-lookup"><span data-stu-id="5692a-123">Examples</span></span>
 
           ```typescript
           async function onChange(event) {
@@ -176,9 +176,9 @@ items:
           ```
   - uid: excel.Excel.TableChangedEventArgs.type
     summary: |-
-      <span data-ttu-id="51f53-122">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="51f53-122">Gets the type of the event.</span></span> <span data-ttu-id="51f53-123">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="51f53-123">See Excel.EventType for details.</span></span>
+      <span data-ttu-id="5692a-124">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="5692a-124">Gets the type of the event.</span></span> <span data-ttu-id="5692a-125">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="5692a-125">See Excel.EventType for details.</span></span>
 
-      <span data-ttu-id="51f53-124">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51f53-124">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5692a-126">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5692a-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: type
     fullName: type
     langs:
@@ -191,9 +191,9 @@ items:
           - '"TableChanged"'
   - uid: excel.Excel.TableChangedEventArgs.worksheetId
     summary: |-
-      <span data-ttu-id="51f53-125">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="51f53-125">Gets the id of the worksheet in which the data changed.</span></span>
+      <span data-ttu-id="5692a-127">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="5692a-127">Gets the id of the worksheet in which the data changed.</span></span>
 
-      <span data-ttu-id="51f53-126">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51f53-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="5692a-128">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5692a-128">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: worksheetId
     fullName: worksheetId
     langs:
@@ -207,7 +207,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="51f53-127">示例</span><span class="sxs-lookup"><span data-stu-id="51f53-127">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="5692a-129">示例</span><span class="sxs-lookup"><span data-stu-id="5692a-129">Examples</span></span>
 
           ```typescript
           async function onChange(event) {
