--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.worksheetchangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.worksheetchangedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.WorksheetChangedEventArgs
     summary: |-
-      <span data-ttu-id="661db-101">提供有关引发 Changed 事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="661db-101">Provides information about the worksheet that raised the Changed event.</span></span>
+      <span data-ttu-id="29b32-101">提供有关引发 Changed 事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="29b32-101">Provides information about the worksheet that raised the Changed event.</span></span>
 
-      <span data-ttu-id="661db-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="661db-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29b32-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29b32-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.WorksheetChangedEventArgs
     fullName: Excel.WorksheetChangedEventArgs
     langs:
@@ -22,9 +22,9 @@ items:
       - excel.Excel.WorksheetChangedEventArgs.worksheetId
   - uid: excel.Excel.WorksheetChangedEventArgs.getRange
     summary: |-
-      <span data-ttu-id="661db-103">获取区域，该区域表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="661db-103">Gets the range that represents the changed area of a specific worksheet.</span></span>
+      <span data-ttu-id="29b32-103">获取区域，该区域表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="29b32-103">Gets the range that represents the changed area of a specific worksheet.</span></span>
 
-      <span data-ttu-id="661db-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="661db-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29b32-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29b32-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getRange(ctx)
     fullName: getRange(ctx)
     langs:
@@ -43,9 +43,9 @@ items:
             - excel.Excel.RequestContext
   - uid: excel.Excel.WorksheetChangedEventArgs.getRangeOrNullObject
     summary: |-
-      <span data-ttu-id="661db-105">获取区域，该区域表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="661db-105">Gets the range that represents the changed area of a specific worksheet.</span></span> <span data-ttu-id="661db-106">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="661db-106">It might return null object.</span></span>
+      <span data-ttu-id="29b32-105">获取区域，该区域表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="29b32-105">Gets the range that represents the changed area of a specific worksheet.</span></span> <span data-ttu-id="29b32-106">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="29b32-106">It might return null object.</span></span>
 
-      <span data-ttu-id="661db-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="661db-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29b32-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29b32-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getRangeOrNullObject(ctx)
     fullName: getRangeOrNullObject(ctx)
     langs:
@@ -64,9 +64,9 @@ items:
             - excel.Excel.RequestContext
   - uid: excel.Excel.WorksheetChangedEventArgs.address
     summary: |-
-      <span data-ttu-id="661db-108">获取区域地址，该地址表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="661db-108">Gets the range address that represents the changed area of a specific worksheet.</span></span>
+      <span data-ttu-id="29b32-108">获取区域地址，该地址表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="29b32-108">Gets the range address that represents the changed area of a specific worksheet.</span></span>
 
-      <span data-ttu-id="661db-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="661db-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29b32-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29b32-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: address
     fullName: address
     langs:
@@ -79,9 +79,9 @@ items:
           - string
   - uid: excel.Excel.WorksheetChangedEventArgs.changeType
     summary: |-
-      <span data-ttu-id="661db-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="661db-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="661db-111">有关详细信息, 请参阅 DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="661db-111">See Excel.DataChangeType for details.</span></span>
+      <span data-ttu-id="29b32-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="29b32-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="29b32-111">有关详细信息, 请参阅 DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="29b32-111">See Excel.DataChangeType for details.</span></span>
 
-      <span data-ttu-id="661db-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="661db-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29b32-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29b32-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: changeType
     fullName: changeType
     langs:
@@ -94,9 +94,9 @@ items:
           - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
   - uid: excel.Excel.WorksheetChangedEventArgs.details
     summary: |-
-      <span data-ttu-id="661db-113">表示更改详情的信息</span><span class="sxs-lookup"><span data-stu-id="661db-113">Represents the information about the change detail</span></span>
+      <span data-ttu-id="29b32-113">表示有关更改详细信息的信息。</span><span class="sxs-lookup"><span data-stu-id="29b32-113">Represents the information about the change detail.</span></span> <span data-ttu-id="29b32-114">当对单个单元格触发 Changed 事件时, 可以检索此属性。</span><span class="sxs-lookup"><span data-stu-id="29b32-114">This property can be retrieved when the Changed event is triggered on single cell.</span></span> <span data-ttu-id="29b32-115">如果已更改的事件在多个单元格中触发, 则不能检索此属性。</span><span class="sxs-lookup"><span data-stu-id="29b32-115">If the Changed event is triggered on multiple cells, this property can not be retrieved.</span></span>
 
-      <span data-ttu-id="661db-114">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="661db-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29b32-116">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29b32-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: details
     fullName: details
     langs:
@@ -110,7 +110,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="661db-115">示例</span><span class="sxs-lookup"><span data-stu-id="661db-115">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="29b32-117">示例</span><span class="sxs-lookup"><span data-stu-id="29b32-117">Examples</span></span>
 
           ```javascript
           // This function would be used as an event handler for the Worksheet.onChanged event.
@@ -128,9 +128,9 @@ items:
           ```
   - uid: excel.Excel.WorksheetChangedEventArgs.source
     summary: |-
-      <span data-ttu-id="661db-116">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="661db-116">Gets the source of the event.</span></span> <span data-ttu-id="661db-117">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="661db-117">See Excel.EventSource for details.</span></span>
+      <span data-ttu-id="29b32-118">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="29b32-118">Gets the source of the event.</span></span> <span data-ttu-id="29b32-119">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="29b32-119">See Excel.EventSource for details.</span></span>
 
-      <span data-ttu-id="661db-118">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="661db-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29b32-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29b32-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: source
     fullName: source
     langs:
@@ -143,9 +143,9 @@ items:
           - Excel.EventSource | "Local" | "Remote"
   - uid: excel.Excel.WorksheetChangedEventArgs.type
     summary: |-
-      <span data-ttu-id="661db-119">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="661db-119">Gets the type of the event.</span></span> <span data-ttu-id="661db-120">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="661db-120">See Excel.EventType for details.</span></span>
+      <span data-ttu-id="29b32-121">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="29b32-121">Gets the type of the event.</span></span> <span data-ttu-id="29b32-122">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="29b32-122">See Excel.EventType for details.</span></span>
 
-      <span data-ttu-id="661db-121">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="661db-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29b32-123">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29b32-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: type
     fullName: type
     langs:
@@ -158,9 +158,9 @@ items:
           - '"WorksheetChanged"'
   - uid: excel.Excel.WorksheetChangedEventArgs.worksheetId
     summary: |-
-      <span data-ttu-id="661db-122">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="661db-122">Gets the id of the worksheet in which the data changed.</span></span>
+      <span data-ttu-id="29b32-124">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="29b32-124">Gets the id of the worksheet in which the data changed.</span></span>
 
-      <span data-ttu-id="661db-123">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="661db-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29b32-125">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29b32-125">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: worksheetId
     fullName: worksheetId
     langs:
