--- a/docs/docs-ref-autogen/visio/visio/visio.selectionchangedeventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.selectionchangedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: visio.Visio.SelectionChangedEventArgs
     summary: |-
-      <span data-ttu-id="1df55-101">提供有关引发了 SelectionChanged 事件的形状集合的信息。</span><span class="sxs-lookup"><span data-stu-id="1df55-101">Provides information about the shape collection that raised the SelectionChanged event.</span></span>
+      <span data-ttu-id="89643-101">提供有关引发了 SelectionChanged 事件的形状集合的信息。</span><span class="sxs-lookup"><span data-stu-id="89643-101">Provides information about the shape collection that raised the SelectionChanged event.</span></span>
 
-      <span data-ttu-id="1df55-102">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="1df55-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      <span data-ttu-id="89643-102">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="89643-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
     name: Visio.SelectionChangedEventArgs
     fullName: Visio.SelectionChangedEventArgs
     langs:
@@ -14,15 +14,13 @@ items:
     remarks: |-
 
 
-      #### <a name="examples"></a><span data-ttu-id="1df55-103">示例</span><span class="sxs-lookup"><span data-stu-id="1df55-103">Examples</span></span>
+      #### <a name="examples"></a><span data-ttu-id="89643-103">示例</span><span class="sxs-lookup"><span data-stu-id="89643-103">Examples</span></span>
 
       ```javascript
-      var eventResult; //Global Variable to store the EventHandlerResult returned on attaching handler.
+      var eventResult; // Global Variable to store the EventHandlerResult returned on attaching handler.
 
-      function AttachHandler()
-      {
-          Visio.run(function(ctx)
-          {
+      function AttachHandler() {
+          Visio.run(session, function(ctx) {
               var doc = ctx.document;
               eventResult = doc.onSelectionChanged.add(
                   function (args) {
@@ -38,22 +36,18 @@ items:
               }
           });
 
-          function onSelectionChanged(args)
-          {
+          function onSelectionChanged(args) {
               console.log(Date.now() + "Selection Changes Event" + JSON.stringify(args));
           }
       }
 
-      function RemoveHandler()
-      {
-          if(!eventResult || !eventResult.context)
-          {
+      function RemoveHandler() {
+          if (!eventResult || !eventResult.context) {
               console.log("Handler has not been attached");
               return;
           }
 
-          Visio.run(eventResult.context, function(ctx)
-          {
+          Visio.run(eventResult.context, function(ctx) {
               eventResult.remove();
               return ctx.sync().then(function (){
                   eventResult = null;
@@ -72,9 +66,9 @@ items:
       - visio.Visio.SelectionChangedEventArgs.shapeNames
   - uid: visio.Visio.SelectionChangedEventArgs.pageName
     summary: |-
-      <span data-ttu-id="1df55-104">获取页面名称，其中包含引发了 SelectionChanged 事件的 ShapeCollection 对象。</span><span class="sxs-lookup"><span data-stu-id="1df55-104">Gets the name of the page which has the ShapeCollection object that raised the SelectionChanged event.</span></span>
+      <span data-ttu-id="89643-104">获取页面名称，其中包含引发了 SelectionChanged 事件的 ShapeCollection 对象。</span><span class="sxs-lookup"><span data-stu-id="89643-104">Gets the name of the page which has the ShapeCollection object that raised the SelectionChanged event.</span></span>
 
-      <span data-ttu-id="1df55-105">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="1df55-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      <span data-ttu-id="89643-105">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="89643-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
     name: pageName
     fullName: pageName
     langs:
@@ -87,9 +81,9 @@ items:
           - string
   - uid: visio.Visio.SelectionChangedEventArgs.shapeNames
     summary: |-
-      <span data-ttu-id="1df55-106">获取引发了 SelectionChanged 事件的形状名称数组。</span><span class="sxs-lookup"><span data-stu-id="1df55-106">Gets the array of shape names that raised the SelectionChanged event.</span></span>
+      <span data-ttu-id="89643-106">获取引发了 SelectionChanged 事件的形状名称数组。</span><span class="sxs-lookup"><span data-stu-id="89643-106">Gets the array of shape names that raised the SelectionChanged event.</span></span>
 
-      <span data-ttu-id="1df55-107">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="1df55-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      <span data-ttu-id="89643-107">\[[API 集: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="89643-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
     name: shapeNames
     fullName: shapeNames
     langs:
