--- a/docs/docs-ref-autogen/office/office/office.eventtype.yml
+++ b/docs/docs-ref-autogen/office/office/office.eventtype.yml
@@ -113,6 +113,7 @@ items:
       事件处理程序接收一个类型为的参数`Office.EnhancedLocationsChangedEventArgs`<!-- -->.
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/javascript-api-for-office)\]
+    isPreview: true
     name: EnhancedLocationsChanged
     fullName: EnhancedLocationsChanged
     langs:
