--- a/docs/docs-ref-autogen/outlook/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.appointmentcompose.yml
@@ -659,6 +659,7 @@ items:
       **错误**:
 
       - `ItemNotSaved`<!-- -->: 在保存项目之前无法检索该 id。
+    isPreview: true
     name: 'getItemIdAsync(options, callback)'
     fullName: 'getItemIdAsync(options, callback)'
     langs:
@@ -696,6 +697,7 @@ items:
       **错误**:
 
       - `ItemNotSaved`<!-- -->: 在保存项目之前无法检索该 id。
+    isPreview: true
     name: getItemIdAsync(callback)
     fullName: getItemIdAsync(callback)
     langs:
