--- a/docs/docs-ref-autogen/outlook/outlook/office.attachmentdetails.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.attachmentdetails.yml
@@ -126,6 +126,7 @@ items:
       获取附件的 url (如果附件的类型为`MailboxEnums.AttachmentType.Cloud`<!-- -->.
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
     name: url
     fullName: url
     langs:
