--- a/docs/docs-ref-autogen/outlook/outlook/office.attachmentschangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.attachmentschangedeventargs.yml
@@ -5,6 +5,7 @@ items:
       提供有关引发`Office.EventType.AttachmentsChanged`事件的附件的信息。
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
     name: Office.AttachmentsChangedEventArgs
     fullName: Office.AttachmentsChangedEventArgs
     langs:
@@ -20,6 +21,7 @@ items:
       代表添加或删除的附件集。 对于每个此类附件, 获取属性的子集:`id`<!-- -->, `name`<!-- -->, `size`<!-- -->, 并`attachmentType`<!-- -->.
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
     name: attachmentDetails
     fullName: attachmentDetails
     langs:
@@ -35,6 +37,7 @@ items:
       获取是否添加或删除了附件。 有关详细信息，请参阅 。
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
     name: attachmentStatus
     fullName: attachmentStatus
     langs:
@@ -50,6 +53,7 @@ items:
       获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
     name: type
     fullName: type
     langs:
