--- a/docs/docs-ref-autogen/outlook/outlook/office.enhancedlocationschangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.enhancedlocationschangedeventargs.yml
@@ -5,6 +5,7 @@ items:
       在引发`Office.EventType.EnhancedLocationsChanged`事件时提供当前增强的位置。
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
     name: Office.EnhancedLocationsChangedEventArgs
     fullName: Office.EnhancedLocationsChangedEventArgs
     langs:
@@ -19,6 +20,7 @@ items:
       获取增强的位置集。
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
     name: enhancedLocations
     fullName: enhancedLocations
     langs:
@@ -34,6 +36,7 @@ items:
       获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
     name: type
     fullName: type
     langs:
