--- a/docs/docs-ref-autogen/office/office/office.addincommands.eventcompletedoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.addincommands.eventcompletedoptions.yml
@@ -11,7 +11,7 @@ items:
     children:
       - office.Office.AddinCommands.EventCompletedOptions.allowEvent
   - uid: office.Office.AddinCommands.EventCompletedOptions.allowEvent
-    summary: '一个布尔值。 当使用完成的方法来使事件处理程序的完成信号时, 此值指示已处理事件应继续执行或被取消。 例如，处理 `ItemSend` 事件的外接程序可以设置 `allowEvent = false` 以取消发送邮件。'
+    summary: '一个布尔值。 当使用完成的方法来使事件处理程序的完成信号时, 此值指示已处理事件应继续执行或被取消。 例如, 处理`ItemSend`事件的外接程序可以设置`allowEvent` `false`为取消发送邮件。'
     name: allowEvent
     fullName: allowEvent
     langs:
