--- a/docs/docs-ref-autogen/outlook/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.messagecompose.yml
@@ -678,6 +678,7 @@ items:
       **错误**:
 
       - `ItemNotSaved`<!-- -->: 在保存项目之前无法检索该 id。
+    isPreview: true
     name: 'getItemIdAsync(options, callback)'
     fullName: 'getItemIdAsync(options, callback)'
     langs:
@@ -715,6 +716,7 @@ items:
       **错误**:
 
       - `ItemNotSaved`<!-- -->: 在保存项目之前无法检索该 id。
+    isPreview: true
     name: getItemIdAsync(callback)
     fullName: getItemIdAsync(callback)
     langs:
