--- a/docs/docs-ref-autogen/outlook_1_4/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/outlook/office.mailbox.yml
@@ -164,6 +164,28 @@ items:
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      // Represents 3:37 PM PDT on Monday, August 26, 2019.
+      var input = {
+          date: 26,
+          hours: 15,
+          milliseconds: 2,
+          minutes: 37,
+          month: 7,
+          seconds: 2,
+          timezoneOffset: -420,
+          year: 2019
+      };
+
+      // result should be a Date object.
+      var result = Office.context.mailbox.convertToUtcClientTime(input);
+
+      // Output should be "2019-08-26T22:37:02.002Z".
+      console.log(result.toISOString());
+      ```
     name: convertToUtcClientTime(input)
     fullName: convertToUtcClientTime(input)
     langs:
