commit bilingual contents

--- a/docs/docs-ref-autogen/outlook/outlook/office.enhancedlocationschangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.enhancedlocationschangedeventargs.yml
@@ -2,9 +2,10 @@
 items:
   - uid: outlook.Office.EnhancedLocationsChangedEventArgs
     summary: |-
-      <span data-ttu-id="51eb9-101">在引发`Office.EventType.EnhancedLocationsChanged`事件时提供当前增强的位置。</span><span class="sxs-lookup"><span data-stu-id="51eb9-101">Provides the current enhanced locations when the `Office.EventType.EnhancedLocationsChanged` event is raised.</span></span>
+      <span data-ttu-id="fe598-101">在引发`Office.EventType.EnhancedLocationsChanged`事件时提供当前增强的位置。</span><span class="sxs-lookup"><span data-stu-id="fe598-101">Provides the current enhanced locations when the `Office.EventType.EnhancedLocationsChanged` event is raised.</span></span>
 
-      <span data-ttu-id="51eb9-102">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51eb9-102">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fe598-102">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fe598-102">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: Office.EnhancedLocationsChangedEventArgs
     fullName: Office.EnhancedLocationsChangedEventArgs
     langs:
@@ -16,9 +17,10 @@ items:
       - outlook.Office.EnhancedLocationsChangedEventArgs.type
   - uid: outlook.Office.EnhancedLocationsChangedEventArgs.enhancedLocations
     summary: |-
-      <span data-ttu-id="51eb9-103">获取增强的位置集。</span><span class="sxs-lookup"><span data-stu-id="51eb9-103">Gets the set of enhanced locations.</span></span>
+      <span data-ttu-id="fe598-103">获取增强的位置集。</span><span class="sxs-lookup"><span data-stu-id="fe598-103">Gets the set of enhanced locations.</span></span>
 
-      <span data-ttu-id="51eb9-104">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51eb9-104">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fe598-104">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fe598-104">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: enhancedLocations
     fullName: enhancedLocations
     langs:
@@ -31,9 +33,10 @@ items:
           - 'LocationDetails[]'
   - uid: outlook.Office.EnhancedLocationsChangedEventArgs.type
     summary: |-
-      <span data-ttu-id="51eb9-105">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="51eb9-105">Gets the type of the event.</span></span> <span data-ttu-id="51eb9-106">有关详细信息，请参阅 `Office.EventType`。</span><span class="sxs-lookup"><span data-stu-id="51eb9-106">See `Office.EventType` for details.</span></span>
+      <span data-ttu-id="fe598-105">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="fe598-105">Gets the type of the event.</span></span> <span data-ttu-id="fe598-106">有关详细信息，请参阅 `Office.EventType`。</span><span class="sxs-lookup"><span data-stu-id="fe598-106">See `Office.EventType` for details.</span></span>
 
-      <span data-ttu-id="51eb9-107">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="51eb9-107">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fe598-107">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fe598-107">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: type
     fullName: type
     langs:
