--- a/docs/docs-ref-autogen/office/office/office.addincommands.event.yml
+++ b/docs/docs-ref-autogen/office/office/office.addincommands.event.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 items:
   - uid: office.Office.AddinCommands.Event
-    summary: <span data-ttu-id="63dc3-101">事件对象作为参数传递给由无 UI 调用的外接程序函数 (不小于命令按钮)。</span><span class="sxs-lookup"><span data-stu-id="63dc3-101">The event object is passed as a parameter to add-in functions invoked by UI-less command buttons.</span></span> <span data-ttu-id="63dc3-102">该对象允许外接程序确定单击了哪个按钮，并向主机发出信号说明已完成处理。</span><span class="sxs-lookup"><span data-stu-id="63dc3-102">The object allows the add-in to identify which button was clicked and to signal the host that it has completed its processing.</span></span>
+    summary: <span data-ttu-id="d07af-101">事件对象作为参数传递给由无 UI 调用的外接程序函数 (不小于命令按钮)。</span><span class="sxs-lookup"><span data-stu-id="d07af-101">The event object is passed as a parameter to add-in functions invoked by UI-less command buttons.</span></span> <span data-ttu-id="d07af-102">该对象允许外接程序确定单击了哪个按钮，并向主机发出信号说明已完成处理。</span><span class="sxs-lookup"><span data-stu-id="d07af-102">The object allows the add-in to identify which button was clicked and to signal the host that it has completed its processing.</span></span>
     remarks: |-
-      <span data-ttu-id="63dc3-103">有关详细支持信息, 请参阅[外接程序命令要求集](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/add-in-commands-requirement-sets)。</span><span class="sxs-lookup"><span data-stu-id="63dc3-103">See [Add-in commands requirement sets](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/add-in-commands-requirement-sets) for more support information.</span></span>
+      <span data-ttu-id="d07af-103">有关详细支持信息, 请参阅[外接程序命令要求集](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/add-in-commands-requirement-sets)。</span><span class="sxs-lookup"><span data-stu-id="d07af-103">See [Add-in commands requirement sets](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/add-in-commands-requirement-sets) for more support information.</span></span>
 
-      <span data-ttu-id="63dc3-104">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限</span><span class="sxs-lookup"><span data-stu-id="63dc3-104">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: Restricted</span></span>
+      <span data-ttu-id="d07af-104">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限</span><span class="sxs-lookup"><span data-stu-id="d07af-104">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: Restricted</span></span>
 
-      <span data-ttu-id="63dc3-105">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="63dc3-105">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="d07af-105">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="d07af-105">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
     name: Office.AddinCommands.Event
     fullName: Office.AddinCommands.Event
     langs:
@@ -19,45 +19,48 @@ items:
       - office.Office.AddinCommands.Event.source
   - uid: office.Office.AddinCommands.Event.completed
     summary: |-
-      <span data-ttu-id="63dc3-106">指示外接程序已完成由外接程序命令按钮或事件处理程序触发的处理。</span><span class="sxs-lookup"><span data-stu-id="63dc3-106">Indicates that the add-in has completed processing that was triggered by an add-in command button or event handler.</span></span>
+      <span data-ttu-id="d07af-106">指示外接程序已完成处理, 并将自动关闭。</span><span class="sxs-lookup"><span data-stu-id="d07af-106">Indicates that the add-in has completed processing and will automatically be closed.</span></span>
 
-      <span data-ttu-id="63dc3-107">此方法必须在由外接程序命令 (由 xsi: type 属性设置为 ExecuteFunction 的 Action 元素定义) 调用的函数末尾调用。</span><span class="sxs-lookup"><span data-stu-id="63dc3-107">This method must be called at the end of a function which was invoked by an add-in command defined with an Action element with an xsi:type attribute set to ExecuteFunction.</span></span> <span data-ttu-id="63dc3-108">调用此方法会向主机客户端发出信号，指示函数已完成并且它可以清理调用该函数所涉及的任何状态。</span><span class="sxs-lookup"><span data-stu-id="63dc3-108">Calling this method signals the host client that the function is complete and that it can clean up any state involved with invoking the function.</span></span> <span data-ttu-id="63dc3-109">例如，如果用户在调用此方法之前关闭 Outlook，Outlook 将警告函数仍在执行。</span><span class="sxs-lookup"><span data-stu-id="63dc3-109">For example, if the user closes Outlook before this method is called, Outlook will warn that a function is still executing.</span></span>
+      <span data-ttu-id="d07af-107">此方法必须在由以下函数调用的函数末尾调用。</span><span class="sxs-lookup"><span data-stu-id="d07af-107">This method must be called at the end of a function which was invoked by the following.</span></span>
 
-      <span data-ttu-id="63dc3-110">事件处理完成后，必须在由 Office.context.mailbox.addHandlerAsync 添加的事件处理程序中调用此方法。</span><span class="sxs-lookup"><span data-stu-id="63dc3-110">This method must be called in an event handler added via Office.context.mailbox.addHandlerAsync after completing processing of the event.</span></span>
+      - <span data-ttu-id="d07af-108">无 UI 按钮 (即, 使用 Action 元素定义的外接程序命令, 其中 xsi: type 属性设置为 ExecuteFunction)</span><span class="sxs-lookup"><span data-stu-id="d07af-108">A UI-less button (i.e., an add-in command defined with an Action element where the xsi:type attribute is set to ExecuteFunction)</span></span>
 
-      <span data-ttu-id="63dc3-111">\[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="63dc3-111">\[ [API set: Mailbox 1.3](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
+      - <span data-ttu-id="d07af-109">[事件扩展点](https://docs.microsoft.com/office/dev/add-ins/reference/manifest/extensionpoint#events)中定义的[事件](https://docs.microsoft.com/office/dev/add-ins/reference/manifest/event)</span><span class="sxs-lookup"><span data-stu-id="d07af-109">An [event](https://docs.microsoft.com/office/dev/add-ins/reference/manifest/event) defined in the [Events extension point](https://docs.microsoft.com/office/dev/add-ins/reference/manifest/extensionpoint#events)</span></span><!-- --><span data-ttu-id="d07af-110">(例如, `ItemSend`事件</span><span class="sxs-lookup"><span data-stu-id="d07af-110">, e.g., an `ItemSend` event</span></span>
+
+      <span data-ttu-id="d07af-111">\[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="d07af-111">\[ [API set: Mailbox 1.3](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
     remarks: |-
-      <span data-ttu-id="63dc3-112">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限</span><span class="sxs-lookup"><span data-stu-id="63dc3-112">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: Restricted</span></span>
+      <span data-ttu-id="d07af-112">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限</span><span class="sxs-lookup"><span data-stu-id="d07af-112">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: Restricted</span></span>
 
-      <span data-ttu-id="63dc3-113">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="63dc3-113">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="d07af-113">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="d07af-113">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
 
-      <span data-ttu-id="63dc3-114">邮箱1.3 没有参数, `options`而邮箱预览不支持`options`参数。</span><span class="sxs-lookup"><span data-stu-id="63dc3-114">Mailbox 1.3 does not have the `options` parameter while Mailbox Preview does have support for `options` parameter.</span></span>
+      <span data-ttu-id="d07af-114">邮箱1.3 没有参数, `options`而邮箱预览不支持`options`参数。</span><span class="sxs-lookup"><span data-stu-id="d07af-114">Mailbox 1.3 does not have the `options` parameter while Mailbox Preview does have support for `options` parameter.</span></span>
 
-      #### <a name="examples"></a><span data-ttu-id="63dc3-115">示例</span><span class="sxs-lookup"><span data-stu-id="63dc3-115">Examples</span></span>
+      #### <a name="examples"></a><span data-ttu-id="d07af-115">示例</span><span class="sxs-lookup"><span data-stu-id="d07af-115">Examples</span></span>
 
       ```javascript
-      function processItem (event) {
+      // For the following example, the processItem function is
+      // defined in the FunctionFile referenced from the add-in manifest,
+      // and maps to the FunctionName of the action in the associated button control.
+      function processItem(event) {
           // Do some processing
 
           event.completed();
       }
-
-      // In the following example, the checkMessage function has
-      // been registered as an event handler for ItemSend.
+      ```
+      ```javascript
+      // For the following example, the checkMessage function was
+      // registered as an event handler for ItemSend.
       function checkMessage(event) {
-          // Get the item being sent
+          // Get the item being sent.
           var outgoingMsg = Office.context.mailbox.item;
 
-          // Check if subject contains "BLOCK"
+          // Check if subject contains "BLOCK".
           outgoingMsg.subject.getAsync(function (result) {
-              // Subject is in result.value
-              if (result.value.indexOf('BLOCK') != -1) {
-                  // Value is found, stop send
-                  event.completed({allowEvent = false});
-              } else {
-                  // Value wasn't found, allow send
-                  event.completed({allowEvent = true});
-              }
+              // Subject is in `result.value`.
+              // If search term "BLOCK" is found, don't send message.
+              const notFound = -1;
+              var allowEvent = (result.value.indexOf('BLOCK') === notFound);
+              event.completed({allowEvent: allowEvent});
           });
       }
       ```
@@ -74,15 +77,15 @@ items:
         description: ''
       parameters:
         - id: options
-          description: '<span data-ttu-id="63dc3-116">可选。</span><span class="sxs-lookup"><span data-stu-id="63dc3-116">Optional.</span></span> <span data-ttu-id="63dc3-117">一个对象, 用于指定事件完成时的行为选项。</span><span class="sxs-lookup"><span data-stu-id="63dc3-117">An object that specifies behavior options for when the event is completed.</span></span>'
+          description: '<span data-ttu-id="d07af-116">可选。</span><span class="sxs-lookup"><span data-stu-id="d07af-116">Optional.</span></span> <span data-ttu-id="d07af-117">一个对象, 用于指定事件完成时的行为选项。</span><span class="sxs-lookup"><span data-stu-id="d07af-117">An object that specifies behavior options for when the event is completed.</span></span>'
           type:
             - office.Office.AddinCommands.EventCompletedOptions
   - uid: office.Office.AddinCommands.Event.source
-    summary: <span data-ttu-id="63dc3-118">有关触发调用此函数的控件的信息。</span><span class="sxs-lookup"><span data-stu-id="63dc3-118">Information about the control that triggered calling this function.</span></span>
+    summary: <span data-ttu-id="d07af-118">有关触发调用此函数的控件的信息。</span><span class="sxs-lookup"><span data-stu-id="d07af-118">Information about the control that triggered calling this function.</span></span>
     remarks: |-
-      <span data-ttu-id="63dc3-119">仅在[要求集](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)邮箱1.3 和更高版本中的 Outlook 中支持此属性。</span><span class="sxs-lookup"><span data-stu-id="63dc3-119">This property is only supported in Outlook in [requirement set](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) Mailbox 1.3 and later.</span></span>
+      <span data-ttu-id="d07af-119">仅在[要求集](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)邮箱1.3 和更高版本中的 Outlook 中支持此属性。</span><span class="sxs-lookup"><span data-stu-id="d07af-119">This property is only supported in Outlook in [requirement set](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) Mailbox 1.3 and later.</span></span>
 
-      #### <a name="examples"></a><span data-ttu-id="63dc3-120">示例</span><span class="sxs-lookup"><span data-stu-id="63dc3-120">Examples</span></span>
+      #### <a name="examples"></a><span data-ttu-id="d07af-120">示例</span><span class="sxs-lookup"><span data-stu-id="d07af-120">Examples</span></span>
 
       ```javascript
       // In this example, consider a button defined in an add-in manifest as follows:
