--- a/docs/docs-ref-autogen/outlook/outlook/office.attachmentdetails.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.attachmentdetails.yml
@@ -2,17 +2,17 @@
 items:
   - uid: outlook.Office.AttachmentDetails
     summary: |-
-      <span data-ttu-id="e0b6c-101">表示服务器中一个项目上的附件。</span><span class="sxs-lookup"><span data-stu-id="e0b6c-101">Represents an attachment on an item from the server.</span></span> <span data-ttu-id="e0b6c-102">仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="e0b6c-102">Read mode only.</span></span>
+      <span data-ttu-id="c9719-101">表示服务器中一个项目上的附件。</span><span class="sxs-lookup"><span data-stu-id="c9719-101">Represents an attachment on an item from the server.</span></span> <span data-ttu-id="c9719-102">仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="c9719-102">Read mode only.</span></span>
 
-      <span data-ttu-id="e0b6c-103">**AttachmentDetails**对象的数组作为约会或邮件项目的附件属性返回。</span><span class="sxs-lookup"><span data-stu-id="e0b6c-103">An array of **AttachmentDetails** objects is returned as the attachments property of an appointment or message item.</span></span>
+      <span data-ttu-id="c9719-103">**AttachmentDetails**对象的数组作为约会或邮件项目的附件属性返回。</span><span class="sxs-lookup"><span data-stu-id="c9719-103">An array of **AttachmentDetails** objects is returned as the attachments property of an appointment or message item.</span></span>
 
-      <span data-ttu-id="e0b6c-104">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0b6c-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c9719-104">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c9719-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     remarks: |-
-      <span data-ttu-id="e0b6c-105">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="e0b6c-105">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
+      <span data-ttu-id="c9719-105">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="c9719-105">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
 
-      <span data-ttu-id="e0b6c-106">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 读取</span><span class="sxs-lookup"><span data-stu-id="e0b6c-106">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Read</span></span>
+      <span data-ttu-id="c9719-106">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 读取</span><span class="sxs-lookup"><span data-stu-id="c9719-106">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Read</span></span>
 
-      #### <a name="examples"></a><span data-ttu-id="e0b6c-107">示例</span><span class="sxs-lookup"><span data-stu-id="e0b6c-107">Examples</span></span>
+      #### <a name="examples"></a><span data-ttu-id="c9719-107">示例</span><span class="sxs-lookup"><span data-stu-id="c9719-107">Examples</span></span>
 
       ```javascript
       // The following code builds an HTML string with details
@@ -50,7 +50,7 @@ items:
       - outlook.Office.AttachmentDetails.size
       - outlook.Office.AttachmentDetails.url
   - uid: outlook.Office.AttachmentDetails.attachmentType
-    summary: <span data-ttu-id="e0b6c-108">获取一个指示附件类型的值。</span><span class="sxs-lookup"><span data-stu-id="e0b6c-108">Gets a value that indicates the type of an attachment.</span></span>
+    summary: <span data-ttu-id="c9719-108">获取一个指示附件类型的值。</span><span class="sxs-lookup"><span data-stu-id="c9719-108">Gets a value that indicates the type of an attachment.</span></span>
     name: attachmentType
     fullName: attachmentType
     langs:
@@ -62,7 +62,7 @@ items:
         type:
           - MailboxEnums.AttachmentType | string
   - uid: outlook.Office.AttachmentDetails.contentType
-    summary: <span data-ttu-id="e0b6c-109">获取附件的 MIME 内容类型。</span><span class="sxs-lookup"><span data-stu-id="e0b6c-109">Gets the MIME content type of the attachment.</span></span>
+    summary: <span data-ttu-id="c9719-109">获取附件的 MIME 内容类型。</span><span class="sxs-lookup"><span data-stu-id="c9719-109">Gets the MIME content type of the attachment.</span></span>
     name: contentType
     fullName: contentType
     langs:
@@ -74,7 +74,7 @@ items:
         type:
           - string
   - uid: outlook.Office.AttachmentDetails.id
-    summary: <span data-ttu-id="e0b6c-110">获取附件的 Exchange 附件 ID。</span><span class="sxs-lookup"><span data-stu-id="e0b6c-110">Gets the Exchange attachment ID of the attachment.</span></span>
+    summary: <span data-ttu-id="c9719-110">获取附件的 Exchange 附件 ID。</span><span class="sxs-lookup"><span data-stu-id="c9719-110">Gets the Exchange attachment ID of the attachment.</span></span>
     name: id
     fullName: id
     langs:
@@ -86,7 +86,7 @@ items:
         type:
           - string
   - uid: outlook.Office.AttachmentDetails.isInline
-    summary: <span data-ttu-id="e0b6c-111">获取指示是否应在项目正文中显示附件的值。</span><span class="sxs-lookup"><span data-stu-id="e0b6c-111">Gets a value that indicates whether the attachment should be displayed in the body of the item.</span></span>
+    summary: <span data-ttu-id="c9719-111">获取指示是否应在项目正文中显示附件的值。</span><span class="sxs-lookup"><span data-stu-id="c9719-111">Gets a value that indicates whether the attachment should be displayed in the body of the item.</span></span>
     name: isInline
     fullName: isInline
     langs:
@@ -98,7 +98,7 @@ items:
         type:
           - boolean
   - uid: outlook.Office.AttachmentDetails.name
-    summary: <span data-ttu-id="e0b6c-112">获取附件的名称。</span><span class="sxs-lookup"><span data-stu-id="e0b6c-112">Gets the name of the attachment.</span></span>
+    summary: <span data-ttu-id="c9719-112">获取附件的名称。</span><span class="sxs-lookup"><span data-stu-id="c9719-112">Gets the name of the attachment.</span></span>
     name: name
     fullName: name
     langs:
@@ -110,7 +110,7 @@ items:
         type:
           - string
   - uid: outlook.Office.AttachmentDetails.size
-    summary: <span data-ttu-id="e0b6c-113">获取以字节为单位的附件大小。</span><span class="sxs-lookup"><span data-stu-id="e0b6c-113">Gets the size of the attachment in bytes.</span></span>
+    summary: <span data-ttu-id="c9719-113">获取以字节为单位的附件大小。</span><span class="sxs-lookup"><span data-stu-id="c9719-113">Gets the size of the attachment in bytes.</span></span>
     name: size
     fullName: size
     langs:
@@ -123,9 +123,10 @@ items:
           - number
   - uid: outlook.Office.AttachmentDetails.url
     summary: |-
-      <span data-ttu-id="e0b6c-114">获取附件的 url (如果附件的类型为`MailboxEnums.AttachmentType.Cloud`</span><span class="sxs-lookup"><span data-stu-id="e0b6c-114">Gets the url of the attachment if its type is `MailboxEnums.AttachmentType.Cloud`</span></span><!-- --><span data-ttu-id="e0b6c-115">.</span><span class="sxs-lookup"><span data-stu-id="e0b6c-115"></span></span>
+      <span data-ttu-id="c9719-114">获取附件的 url (如果附件的类型为`MailboxEnums.AttachmentType.Cloud`</span><span class="sxs-lookup"><span data-stu-id="c9719-114">Gets the url of the attachment if its type is `MailboxEnums.AttachmentType.Cloud`</span></span><!-- --><span data-ttu-id="c9719-115">.</span><span class="sxs-lookup"><span data-stu-id="c9719-115"></span></span>
 
-      <span data-ttu-id="e0b6c-116">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0b6c-116">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c9719-116">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c9719-116">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: url
     fullName: url
     langs:
