--- a/docs/docs-ref-autogen/outlook/outlook/office.attachmentschangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.attachmentschangedeventargs.yml
@@ -2,9 +2,10 @@
 items:
   - uid: outlook.Office.AttachmentsChangedEventArgs
     summary: |-
-      <span data-ttu-id="e5ec5-101">提供有关引发`Office.EventType.AttachmentsChanged`事件的附件的信息。</span><span class="sxs-lookup"><span data-stu-id="e5ec5-101">Provides information about the attachments that raised the `Office.EventType.AttachmentsChanged` event.</span></span>
+      <span data-ttu-id="4bbcd-101">提供有关引发`Office.EventType.AttachmentsChanged`事件的附件的信息。</span><span class="sxs-lookup"><span data-stu-id="4bbcd-101">Provides information about the attachments that raised the `Office.EventType.AttachmentsChanged` event.</span></span>
 
-      <span data-ttu-id="e5ec5-102">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5ec5-102">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="4bbcd-102">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4bbcd-102">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: Office.AttachmentsChangedEventArgs
     fullName: Office.AttachmentsChangedEventArgs
     langs:
@@ -17,9 +18,10 @@ items:
       - outlook.Office.AttachmentsChangedEventArgs.type
   - uid: outlook.Office.AttachmentsChangedEventArgs.attachmentDetails
     summary: |-
-      <span data-ttu-id="e5ec5-103">代表添加或删除的附件集。</span><span class="sxs-lookup"><span data-stu-id="e5ec5-103">Represents the set of attachments that were added or removed.</span></span> <span data-ttu-id="e5ec5-104">对于每个此类附件, 获取属性的子集:`id`</span><span class="sxs-lookup"><span data-stu-id="e5ec5-104">For each such attachment, gets a subset of  properties: `id`</span></span><!-- --><span data-ttu-id="e5ec5-105">, `name`</span><span class="sxs-lookup"><span data-stu-id="e5ec5-105"></span></span><!-- --><span data-ttu-id="e5ec5-106">, `size`</span><span class="sxs-lookup"><span data-stu-id="e5ec5-106"></span></span><!-- --><span data-ttu-id="e5ec5-107">, 并`attachmentType`</span><span class="sxs-lookup"><span data-stu-id="e5ec5-107">, and `attachmentType`</span></span><!-- --><span data-ttu-id="e5ec5-108">.</span><span class="sxs-lookup"><span data-stu-id="e5ec5-108"></span></span>
+      <span data-ttu-id="4bbcd-103">代表添加或删除的附件集。</span><span class="sxs-lookup"><span data-stu-id="4bbcd-103">Represents the set of attachments that were added or removed.</span></span> <span data-ttu-id="4bbcd-104">对于每个此类附件, 获取属性的子集:`id`</span><span class="sxs-lookup"><span data-stu-id="4bbcd-104">For each such attachment, gets a subset of  properties: `id`</span></span><!-- --><span data-ttu-id="4bbcd-105">, `name`</span><span class="sxs-lookup"><span data-stu-id="4bbcd-105"></span></span><!-- --><span data-ttu-id="4bbcd-106">, `size`</span><span class="sxs-lookup"><span data-stu-id="4bbcd-106"></span></span><!-- --><span data-ttu-id="4bbcd-107">, 并`attachmentType`</span><span class="sxs-lookup"><span data-stu-id="4bbcd-107">, and `attachmentType`</span></span><!-- --><span data-ttu-id="4bbcd-108">.</span><span class="sxs-lookup"><span data-stu-id="4bbcd-108"></span></span>
 
-      <span data-ttu-id="e5ec5-109">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5ec5-109">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="4bbcd-109">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4bbcd-109">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: attachmentDetails
     fullName: attachmentDetails
     langs:
@@ -32,9 +34,10 @@ items:
           - 'object[]'
   - uid: outlook.Office.AttachmentsChangedEventArgs.attachmentStatus
     summary: |-
-      <span data-ttu-id="e5ec5-110">获取是否添加或删除了附件。</span><span class="sxs-lookup"><span data-stu-id="e5ec5-110">Gets whether the attachments were added or removed.</span></span> <span data-ttu-id="e5ec5-111">有关详细信息，请参阅 。</span><span class="sxs-lookup"><span data-stu-id="e5ec5-111">See  for details.</span></span>
+      <span data-ttu-id="4bbcd-110">获取是否添加或删除了附件。</span><span class="sxs-lookup"><span data-stu-id="4bbcd-110">Gets whether the attachments were added or removed.</span></span> <span data-ttu-id="4bbcd-111">有关详细信息，请参阅 。</span><span class="sxs-lookup"><span data-stu-id="4bbcd-111">See  for details.</span></span>
 
-      <span data-ttu-id="e5ec5-112">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5ec5-112">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="4bbcd-112">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4bbcd-112">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: attachmentStatus
     fullName: attachmentStatus
     langs:
@@ -47,9 +50,10 @@ items:
           - MailboxEnums.AttachmentStatus | string
   - uid: outlook.Office.AttachmentsChangedEventArgs.type
     summary: |-
-      <span data-ttu-id="e5ec5-113">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="e5ec5-113">Gets the type of the event.</span></span> <span data-ttu-id="e5ec5-114">有关详细信息，请参阅 `Office.EventType`。</span><span class="sxs-lookup"><span data-stu-id="e5ec5-114">See `Office.EventType` for details.</span></span>
+      <span data-ttu-id="4bbcd-113">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="4bbcd-113">Gets the type of the event.</span></span> <span data-ttu-id="4bbcd-114">有关详细信息，请参阅 `Office.EventType`。</span><span class="sxs-lookup"><span data-stu-id="4bbcd-114">See `Office.EventType` for details.</span></span>
 
-      <span data-ttu-id="e5ec5-115">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5ec5-115">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="4bbcd-115">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4bbcd-115">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: type
     fullName: type
     langs:
