--- a/docs/docs-ref-autogen/outlook/outlook/office.officethemechangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.officethemechangedeventargs.yml
@@ -2,9 +2,10 @@
 items:
   - uid: outlook.Office.OfficeThemeChangedEventArgs
     summary: |-
-      <span data-ttu-id="7c1c6-101">提供已更新的 Office 主题, 以`Office.EventType.OfficeThemeChanged`引发该事件。</span><span class="sxs-lookup"><span data-stu-id="7c1c6-101">Provides the updated Office theme that raised the `Office.EventType.OfficeThemeChanged` event.</span></span>
+      <span data-ttu-id="b6990-101">提供已更新的 Office 主题, 以`Office.EventType.OfficeThemeChanged`引发该事件。</span><span class="sxs-lookup"><span data-stu-id="b6990-101">Provides the updated Office theme that raised the `Office.EventType.OfficeThemeChanged` event.</span></span>
 
-      <span data-ttu-id="7c1c6-102">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7c1c6-102">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b6990-102">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b6990-102">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: Office.OfficeThemeChangedEventArgs
     fullName: Office.OfficeThemeChangedEventArgs
     langs:
@@ -16,9 +17,10 @@ items:
       - outlook.Office.OfficeThemeChangedEventArgs.type
   - uid: outlook.Office.OfficeThemeChangedEventArgs.officeTheme
     summary: |-
-      <span data-ttu-id="7c1c6-103">获取已更新的 Office 主题。</span><span class="sxs-lookup"><span data-stu-id="7c1c6-103">Gets the updated Office theme.</span></span>
+      <span data-ttu-id="b6990-103">获取已更新的 Office 主题。</span><span class="sxs-lookup"><span data-stu-id="b6990-103">Gets the updated Office theme.</span></span>
 
-      <span data-ttu-id="7c1c6-104">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7c1c6-104">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b6990-104">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b6990-104">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: officeTheme
     fullName: officeTheme
     langs:
@@ -31,9 +33,10 @@ items:
           - Office.OfficeTheme
   - uid: outlook.Office.OfficeThemeChangedEventArgs.type
     summary: |-
-      <span data-ttu-id="7c1c6-105">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="7c1c6-105">Gets the type of the event.</span></span> <span data-ttu-id="7c1c6-106">有关详细信息，请参阅 `Office.EventType`。</span><span class="sxs-lookup"><span data-stu-id="7c1c6-106">See `Office.EventType` for details.</span></span>
+      <span data-ttu-id="b6990-105">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="b6990-105">Gets the type of the event.</span></span> <span data-ttu-id="b6990-106">有关详细信息，请参阅 `Office.EventType`。</span><span class="sxs-lookup"><span data-stu-id="b6990-106">See `Office.EventType` for details.</span></span>
 
-      <span data-ttu-id="7c1c6-107">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7c1c6-107">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="b6990-107">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b6990-107">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    isPreview: true
     name: type
     fullName: type
     langs:
